# sendly-python

./: .gitignore  CHANGELOG.md  MANIFEST.in  Makefile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  tox.ini
examples/: __init__.py  advanced_usage.py  basic_usage.py  sandbox_testing.py
sendly/: __init__.py  client.py
sendly.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sendly/resources/: sms.py
sendly/utils/: __init__.py  validation.py
tests/: __init__.py
tests/integration/: __init__.py  test_error_scenarios.py  test_sms_integration.py
tests/unit/: __init__.py  test_client.py  test_errors.py  test_http_client.py  test_sms.py  test_validation.py
