# pyproject.toml - Modern Python packaging configuration (PEP 518)

[build-system]
requires = [
    "setuptools>=45.0.0",
    "wheel>=0.37.0",
    "setuptools-scm>=6.0.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "sendly"
dynamic = ["version"]
description = "The official Python SDK for Sendly - the Resend of SMS"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Sendly Team", email = "support@sendly.live"}
]
maintainers = [
    {name = "Sendly Team", email = "support@sendly.live"}
]
keywords = [
    "sms", "mms", "messaging", "text", "sendly", "api", "sdk",
    "notifications", "communications", "mobile", "phone",
    "resend", "webhook", "international", "routing"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: Communications",
    "Topic :: Communications :: Telephony",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
requires-python = ">=3.7"
dependencies = [
    "requests>=2.25.0",
    "typing-extensions>=3.7.4; python_version<'3.8'",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=6.0.0",
    "pytest-cov>=2.10.0",
    "pytest-mock>=3.6.0",
    "responses>=0.18.0",
    # Code quality
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    # Documentation
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
    # Build tools
    "build>=0.8.0",
    "twine>=4.0.0",
    "wheel>=0.37.0",
]
test = [
    "pytest>=6.0.0",
    "pytest-cov>=2.10.0",
    "pytest-mock>=3.6.0",
    "responses>=0.18.0",
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.18.0",
]

[project.urls]
Homepage = "https://sendly.live"
Documentation = "https://docs.sendly.live/sdks/python"
Repository = "https://github.com/sendly-live/sendly-python"
"Bug Tracker" = "https://github.com/sendly-live/sendly-python/issues"
Dashboard = "https://dashboard.sendly.live"

# Tool configuration sections

[tool.setuptools]
packages = ["sendly", "sendly.resources", "sendly.utils"]
package-data = {"sendly" = ["py.typed"]}

[tool.setuptools.dynamic]
version = {attr = "sendly.__version__"}

# Black code formatter configuration
[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # Directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# isort import sorter configuration
[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

# mypy type checker configuration
[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "requests.*",
    "responses.*",
]
ignore_missing_imports = true

# pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=sendly",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=90",
    "--verbose",
    "--strict-markers",
    "--disable-warnings",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
    "network: Tests that require network access",
]

# Coverage configuration
[tool.coverage.run]
source = ["sendly"]
omit = [
    "tests/*",
    "examples/*",
    "setup.py",
    "sendly/__version__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
